# how-to-use-raspberrypi-pico

./: .gitignore  README.md
2.Manual/uf2/: README.md
3.C/: README.md
3.C/3.Toolchain/: .gitattributes
3.C_CPP/3.Toolchain/: RAEDME.md
3.C_CPP/CMake/: README.md
3.C_CPP/CMake/5.Examples/spi/spi_st7789/: CMakeLists.txt  spi_st7789.c
3.C_CPP/CMake/5.MyExamples/ext_CoreMark/: CMakeLists.txt  Coremark-RP2040.uf2  README.md
3.C_CPP/CMake/5.MyExamples/ext_CoreMark/src/: core_portme.c  core_portme.h  coremark.h  ee_printf.c
3.C_CPP/CMake/5.MyExamples/ext_modbus/: CMakeLists.txt
3.C_CPP/CMake/5.MyExamples/ext_modbus/__org/: README.md
3.C_CPP/CMake/5.MyExamples/ext_modbus/inc/: config.h  para_group.h  para_table.h  tusb_config.h  usdk.types.h
3.C_CPP/CMake/5.MyExamples/ext_modbus/lib/: CMakeLists.txt
3.C_CPP/CMake/5.MyExamples/ext_modbus/lib/modbus/: CMakeLists.txt  fn.md
3.C_CPP/CMake/5.MyExamples/ext_modbus/lib/modbus/inc/: mbcom.h  mbmst.h  mbslv.h
3.C_CPP/CMake/5.MyExamples/ext_modbus/lib/modbus/src/: mbmst.c  mbslv.c  modbus.c
3.C_CPP/CMake/5.MyExamples/ext_modbus/lib/pid/: CMakeLists.txt  pid.c  pid.h
3.C_CPP/CMake/5.MyExamples/ext_modbus/mbpoll/: README.md  basic.mbp  ext_cfg_1.mbp  ext_cfg_2.mbp  ext_reg_1.mbp  ext_reg_2.mbp  pid.mbp  xfer.mbp
3.C_CPP/CMake/5.MyExamples/ext_modbus/src/: main.c  para_group.c  para_table.c  usb_desc.c
3.C_CPP/CMake/5.MyExamples/gpio_onewire_dht11/: CMakeLists.txt  dht11.cpp  dht11.h  gpio_dht11.uf2  main.cpp
3.C_CPP/CMake/5.MyExamples/gpio_tm1638/: CMakeLists.txt  README.md  main.cpp
3.C_CPP/CMake/5.MyExamples/gpio_tm1638/lib/: CMakeLists.txt
3.C_CPP/CMake/5.MyExamples/gpio_tm1638/lib/tm1638/: CMakeLists.txt
3.C_CPP/CMake/5.MyExamples/gpio_tm1638/lib/tm1638/inc/: tm1638.h  tm1638drv.h
3.C_CPP/CMake/5.MyExamples/gpio_tm1638/lib/tm1638/src/: tm1638.cpp  tm1638drv.cpp
3.C_CPP/CMake/5.MyExamples/i2c_scanner/: CMakeLists.txt  README.md  main.c
3.C_CPP/CMake/5.MyExamples/i2c_scanner/fireware/: i2c0_sda4_scl5.uf2  i2c1_sda14_scl15.uf2
3.C_CPP/CMake/5.MyExamples/i2c_scanner/fw/: i2c0_sda0_scl1.uf2  i2c0_sda16_scl17.uf2
3.C_CPP/CMake/5.MyExamples/pio_can/: CMakeLists.txt
3.C_CPP/CMake/5.MyExamples/pio_can/lib/: CMakeLists.txt
3.C_CPP/CMake/5.MyExamples/pio_can/lib/can2040/: CMakeLists.txt  README.md
3.C_CPP/CMake/5.MyExamples/pio_can/lib/can2040/src/: can2040.h
3.C_CPP/CMake/5.MyExamples/pio_can/src/: main.c
3.C_CPP/CMake/5.MyExamples/pio_cdef/: CMakeLists.txt  main.c  pio_asm_def.h
3.C_CPP/CMake/5.MyExamples/pio_hcsr04/: CMakeLists.txt  HCSR04.hpp  README.md  main.cpp  pio_hcsr04.uf2
3.C_CPP/CMake/5.MyExamples/pio_keymatrix_4x4/: CMakeLists.txt  README.md  main.cpp  pio_keymatrix_4x4.uf2
3.C_CPP/CMake/5.MyExamples/pio_nec_ir_transmit/: CMakeLists.txt  main.c  pio_ir_transmit.uf2
3.C_CPP/CMake/5.MyExamples/pio_nec_ir_transmit/nec_transmit/: nec_transmit.h
3.C_CPP/CMake/5.MyExamples/pio_number_multiply/: CMakeLists.txt  README.md  main.cpp  pio_multiplier.uf2
3.C_CPP/CMake/5.MyExamples/pio_onewire_dht/: CMakeLists.txt  main.c  pio_dht.uf2
3.C_CPP/CMake/5.MyExamples/pio_onewire_dht/dht/: dht.c
3.C_CPP/CMake/5.MyExamples/pio_tutorial/: CMakeLists.txt  README.md
3.C_CPP/CMake/5.MyExamples/pio_tutorial/fireware/: sm_to_dma_to_buffer.uf2  sm_to_dma_to_sm_to_dma_to_buffer.uf2  subroutine.uf2  two_p_one_f.uf2  two_sm_one_disabled.uf2  two_sm_one_disabled_with_irq.uf2  two_sm_simple.uf2
3.C_CPP/CMake/5.MyExamples/pio_tutorial/multiplication/: CMakeLists.txt  multiplier.cpp
3.C_CPP/CMake/5.MyExamples/pio_tutorial/sm_to_dma_to_buffer/: CMakeLists.txt  sm_to_dma_to_buffer.cpp
3.C_CPP/CMake/5.MyExamples/pio_tutorial/sm_to_dma_to_sm_to_dma_to_buffer/: CMakeLists.txt  sm_to_dma_to_sm_to_dma_to_buffer.cpp
3.C_CPP/CMake/5.MyExamples/pio_tutorial/subroutines/: CMakeLists.txt  subroutine.cpp
3.C_CPP/CMake/5.MyExamples/pio_tutorial/two_pio_programs_one_file/: CMakeLists.txt  two_p_one_f.cpp
3.C_CPP/CMake/5.MyExamples/pio_tutorial/two_sm_one_disabled/: CMakeLists.txt  two_sm_one_disabled.cpp
3.C_CPP/CMake/5.MyExamples/pio_tutorial/two_sm_one_disabled_with_irq/: CMakeLists.txt  two_sm_one_disabled_with_irq.cpp
3.C_CPP/CMake/5.MyExamples/pio_tutorial/two_sm_simple/: CMakeLists.txt  two_sm_simple.cpp
3.C_CPP/CMake/5.MyExamples/uart_bootloadter/application/: CMakeLists.txt
3.C_CPP/CMake/5.MyExamples/uart_bootloadter/application/fireware/: blink.elf  hello_serial.elf  hello_usb.elf
3.C_CPP/CMake/5.MyExamples/uart_logic_analyzer/: CMakeLists.txt
3.C_CPP/CMake/5.MyExamples/usb_cdc_transfer_station/: CMakeLists.txt  README.md
3.C_CPP/CMake/5.MyExamples/usb_cdc_transfer_station/__org/: README.md
3.C_CPP/CMake/5.MyExamples/usb_cdc_transfer_station/src/: main.c
3.C_CPP/CMake/5.MyExamples/usb_cdc_uart_bridge_x2/: CMakeLists.txt  README.md  uart-bridge.c  usb-descriptors.c  usb_uart_bridge.uf2
3.C_CPP/CMake/5.MyExamples/wdg_reboot/: CMakeLists.txt  README.md
3.JavaScript/: README.md
3.JavaScript/Examples/: api.md
3.JavaScript/Fireware/: kaluma-rp2-pico-1.1.0-beta.3.uf2  kaluma-rp2-pico-w-1.1.0-beta.3.uf2
3.MicroPython/2.Firmware/: adafruit-circuitpython-raspberry_pi_pico-en_US-8.2.5.uf2  adafruit-circuitpython-raspberry_pi_pico-zh_Latn_pinyin-8.2.5.uf2  adafruit-circuitpython-raspberry_pi_pico_w-en_US-8.2.5.uf2  adafruit-circuitpython-raspberry_pi_pico_w-zh_Latn_pinyin-8.2.5.uf2
3.Micropython/2.Firmware/: README.md
3.Rust/3.Toolchain/: README.md
3.TypeScript/: README.md
3.TypeScript/Fireware/: devicescript-rp2040-msr124.uf2  devicescript-rp2040-pico.uf2  devicescript-rp2040w-pico_w.uf2
3.TypeScript/Toolchain/: devicescript.devicescript-vscode-2.15.5.vsix
9.Inbox/100Msps双通道示波器/: README.md
9.Inbox/16通道100MHz逻辑分析仪/: README.txt
9.Inbox/Cortex-M0+的汇编指令执行周期/: a.md
9.Inbox/MDK/: README.md
9.Inbox/RP2040固化的bootrom源码，含模拟U盘实现固件拖拽源码/: README.md
9.Inbox/RP2040的内存映射memory map，含各个RAM和Flash块地址/: a.md
9.Inbox/信号发生器/: RAEDME.md  固件.7z
9.Inbox/又有一款21通道120Msps的树莓派单片机逻辑分析仪上线，上位机采用sigrokpulseview/: RAEDME.md
9.Inbox/树莓派单片机直驱DVIHDMI接口显示屏炫酷效果展示/: RAEDME.md
(+122 files in other folders)
